gfxboot-theme-ubuntu (0.5.19) UNRELEASED; urgency=low

  * Rebuild font based on debian-installer 20070308ubuntu39.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Apr 2008 14:54:04 +0100

gfxboot-theme-ubuntu (0.5.18) hardy; urgency=low

  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Apr 2008 10:10:11 +0100

gfxboot-theme-ubuntu (0.5.17) hardy; urgency=low

  * Add a header to the language and keymap menus; this seems to make it
    feel like less of an accident when the language menu is displayed
    automatically on startup.
  * Don't display "Press F4 to select alternative start-up and installation
    modes" until the initial language menu has been dismissed (LP: #197260).
  * Update sizes of menu items before adjusting the menu to avoid screen
    width overflow (LP: #44950).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 07 Apr 2008 14:09:10 +0100

gfxboot-theme-ubuntu (0.5.16) hardy; urgency=low

  * Set language using debian-installer/language= rather than locale= if it
    does not need an explicit country specification (LP: #85162).

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 06 Apr 2008 13:58:38 +0100

gfxboot-theme-ubuntu (0.5.15) hardy; urgency=low

  * Rebuild font based on debian-installer 20070308ubuntu35.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Apr 2008 12:00:36 +0100

gfxboot-theme-ubuntu (0.5.14) hardy; urgency=low

  * Update translations from Launchpad.
  * Add edd=on option to the "Other Options" menu.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Apr 2008 10:23:24 +0100

gfxboot-theme-ubuntu (0.5.13) hardy; urgency=low

  * Fix handling of "Free software only" boot option on live CDs.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 31 Mar 2008 19:50:24 +0100

gfxboot-theme-ubuntu (0.5.12) hardy; urgency=low

  * Add a "Free software only" boot option (mapping to
    apt-setup/restricted=false apt-setup/multiverse=false).
  * Make "Normal" label in modes menu translatable (LP: #201347).
