@@ -19,7 +19,7 @@
   [ "fr" "fr_FR" "Français" ]
   [ "gl" "gl_ES" "Galego" ]
   [ "gu" "gu_IN" "Gujarati" ]
-  [ "he" "he_IL" "עברית" ]
+  [ "he" "he_IL" "Hebrew" ]
   [ "hi" "hi_IN" "Hindi" ]
   [ "hr" "hr_HR" "Hrvatski" ]
   [ "hu" "hu_HU" "Magyarul" ]
