@@ -23,6 +23,7 @@ my @langname_notranslate = (
     'Bengali',
     'Dzongkha',
     'Gujarati',
+    'Hebrew',
     'Hindi',
     'Khmer',
     'Malayalam',
